changed startup script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js -e ejs,js,css,html,jpg,png,scss"
+    "start-dev" : "nodemon index.js -e ejs,js,css,html,jpg,png,scss",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
