--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev" : "nodemon index.js -e ejs,js,css,html,jpg,png,scss",
-    "start": "node index.js"
+    "start-dev": "nodemon index.js -e ejs,js,css,html,jpg,png,scss",
+    "start": "DEBUG=express:* node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
